--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^6.0.0",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "fs": "^0.0.1-security",
     "jade": "~1.11.0",
     "mongoose": "^5.2.17",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
